# TinyTimeMixers

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  setup_codespace.sh
.github/: labeler.yml
.github/workflows/: code_quality_control.yml  cos_integration.yml  docs.yml  docs_test.yml  lints.yml  pr_request_checks.yml  pylint.yml  python-publish.yml  quality.yml  ruff.yml  run_test.yml  test.yml  testing.yml  unit-test.yml  welcome.yml
Summary/: summary20251224.1.md
benchmarks/: __init__.py
benchmarks/gift_eval/: __init__.py  adapter.py  config.py  dataset_loader.py  results.py  runner.py
benchmarks/tabpfn_comparison/: __init__.py  compare.py  wrapper.py
docs/: architecture.md  benchmarking.md  index.md  metric.md
docs/design/: ADR-001-implementation.md
docs/examples/: index.md
notebooks/: TTM_GPU_Demo.ipynb
scripts/: benchmark_gift.py  compare_tabpfn.py
tests/: __init__.py  test_main.py  test_tinytimemixers.py
tests/performance/: __init__.py
tests/unit/: __init__.py  test_benchmarks.py  test_evaluation.py  test_training.py  test_ttm.py
tinytimemixers/: __init__.py  config.py  tinytimemixers.py
tinytimemixers/data/: __init__.py  augmentation.py  dataset.py  monash_loader.py  preprocessing.py
tinytimemixers/evaluation/: __init__.py  forecaster.py  metrics.py
tinytimemixers/layers/: __init__.py  mixer_mlp.py  normalization.py  patch_embedding.py  patch_partition.py  resolution_prefix.py  tsmixer_block.py
tinytimemixers/models/: __init__.py  backbone.py  decoder.py  forecast_head.py  ttm.py
tinytimemixers/training/: __init__.py  losses.py  optimizer.py  trainer.py
tinytimemixers/utils/: __init__.py  checkpoint.py  device.py
